[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/gun.png" type="Texture" id=1]
[ext_resource path="res://Assets/Run.png" type="Texture" id=2]
[ext_resource path="res://Assets/sounds/jump1.ogg" type="AudioStream" id=3]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=4]
[ext_resource path="res://Assets/sounds/confirmation_001.ogg" type="AudioStream" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Running"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Player_Running:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Gun:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 2, 5 ), Vector2( 2, 6 ), Vector2( 2, 5 ), Vector2( 2, 6 ), Vector2( 2, 5 ), Vector2( 2, 6 ) ]
}

[sub_resource type="CapsuleShape2D" id=2]
radius = 26.0
height = 28.0

[node name="Player" type="KinematicBody2D"]
collision_mask = 8
script = ExtResource( 4 )

[node name="Player_Running" type="Sprite" parent="."]
position = Vector2( 7.62939e-06, -12 )
scale = Vector2( 2.5625, 2.39583 )
texture = ExtResource( 2 )
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Running = SubResource( 1 )

[node name="Gun" type="Sprite" parent="."]
position = Vector2( 2, 5 )
scale = Vector2( 2.37019, 3.12946 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -11, 7 )
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 32, 1 )

[node name="SoundJump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -19.57

[node name="SoundShoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -6.118
